# linux-ops-suite

./: .gitignore  CHANGELOG.md  CONDUCTOR_DESIGN.md  CONDUCTOR_PHASE2_HANDOFF.md  Cargo.toml  INSTALLER-STATUS.md  LAST_WORK.md  LICENSE  PROJECT-STATUS.md  PULSE_DESIGN.md  README.md  README.md.backup  REWIND_DESIGN.md  TRIPWIRE_DESIGN.md  install.sh  rust-toolchain.toml
crates/bulwark/: Cargo.toml
crates/bulwark-core/: Cargo.toml
crates/bulwark-core/config/: default.yaml
crates/bulwark-core/src/: error.rs  lib.rs
crates/bulwark-core/src/app/: mod.rs
crates/bulwark-core/src/core/: engine.rs  mod.rs  model.rs
crates/bulwark/src/: lib.rs  main.rs
crates/bulwark/src/commands/: mod.rs  workstate_feed.rs
crates/bulwark/src/tui/: mod.rs
crates/bulwark/tests/: cli_json_contract.rs  no_tui_feature.rs  public_api_compat.rs  workspace_boundaries.rs  workstate_feed_contract.rs
crates/conductor/: Cargo.toml  README.md
crates/conductor/src/: cli.rs  error.rs  lib.rs  main.rs  report.rs  run.rs  sources.rs  state.rs  util.rs
crates/conductor/src/commands/: bulwark.rs  mod.rs  rewind.rs  snapshot.rs  workstate.rs
crates/conductor/src/core/: config.rs  error.rs  mod.rs
crates/conductor/src/plan/: mod.rs  rules.rs
crates/conductor/src/state/: mod.rs  workstate.rs
crates/conductor/src/tui/: app.rs  frame.rs  mod.rs  render.rs  runtime.rs  style.rs  term.rs
crates/conductor/src/ui/: display.rs  mod.rs
crates/conductor/tests/: cli.rs
crates/linux-ops-install/: Cargo.toml
crates/linux-ops-install/src/: error.rs  fs_ops.rs  main.rs  net.rs  platform.rs  release.rs  ui.rs  verify.rs
crates/portman/: Cargo.toml  README.md
crates/portman/src/: baseline.rs  error.rs  lib.rs  main.rs  model.rs  report.rs  util.rs
crates/portman/src/scan/: mod.rs  owner.rs  sockets.rs
crates/proto/: ARCHITECTURE.md  Cargo.toml  README.md
crates/proto/protocols/: ai-agent-handoff.yaml  bugfix-investigation.yaml  incident-response.yaml  release-readiness.yaml  rust-repo-review.yaml  safe-install.yaml  weekly-maintenance.yaml  workstate-feed-validation.yaml
crates/proto/src/: lib.rs  main.rs
crates/proto/src/cli/: autocheck.rs  delete.rs  export.rs  feed_cmd.rs  list.rs  mod.rs  picker.rs  run.rs  search.rs  sessions.rs  show.rs  validate.rs
crates/proto/src/core/: checks.rs  detector.rs  error.rs  feed.rs  loader.rs  mod.rs  protocol.rs  render.rs  session.rs  store.rs  summary.rs
crates/proto/tests/: cli.rs  feed_contract.rs  loader.rs  protocol_fixture.rs  render.rs  session.rs  session_contract.rs  store.rs
crates/proto/tests/common/: mod.rs
crates/proto/tests/fixtures/: proto.session.example.json  proto.workstate-feed.example.json  proto.workstate-feed.schema.json
crates/pulse/: Cargo.toml  README.md
crates/pulse/src/: app.rs  cockpit.rs  main.rs  sources.rs  status.rs  tui.rs  verdict.rs  view.rs
crates/pulse/src/snapshots/: pulse__view__tests__snapshot_attention_has_block_and_footer.snap  pulse__view__tests__snapshot_attention_view.snap  pulse__view__tests__snapshot_details_view.snap  pulse__view__tests__snapshot_feeds_view.snap  pulse__view__tests__snapshot_healthy_is_calm_and_centered.snap  pulse__view__tests__snapshot_help_view.snap  pulse__view__tests__snapshot_incomplete.snap  pulse__view__tests__snapshot_search_view_with_a_match.snap
crates/pulse/tests/: status_cli.rs
crates/rewind/: Cargo.toml  README.md
crates/rewind/src/: capture.rs  diff.rs  error.rs  lib.rs  main.rs  model.rs  prune.rs  report.rs  restore.rs  set.rs  store.rs  util.rs
crates/rewind/src/scan/: meta.rs  mod.rs  walk.rs
crates/rex-check/: Cargo.toml
crates/rex-check/src/: main.rs
crates/rex-doctor/: Cargo.toml  README.md
crates/rex-doctor/src/: error.rs  lib.rs  main.rs  model.rs  report.rs  util.rs
crates/rex-forge/: Cargo.toml  README.md  build.rs
crates/rex-forge/src/: cli.rs  error.rs  filetree.rs  lib.rs  main.rs  merge.rs  model.rs  registry.rs  render.rs  resolve.rs  writer.rs
crates/rex-forge/tests/: cli_e2e.rs  compile_gate.rs  golden.rs  registry.rs  resolve.rs  writer.rs
crates/rexops-tui/: Cargo.toml
crates/scriptvault/: Cargo.toml
crates/scriptvault-core/: Cargo.toml
crates/scriptvault-core/config/: default.yaml
crates/scriptvault-core/src/: error.rs  lib.rs  model.rs
crates/scriptvault-core/tests/: pipeline.rs
crates/scriptvault/src/: cli.rs  logging.rs  main.rs
crates/suite-core/: Cargo.toml
crates/suite-core/src/: env.rs  fmt.rs  lib.rs  path.rs  xdg.rs
crates/suite-ui/: Cargo.toml
crates/suite-ui/examples/: gallery.rs
crates/suite-ui/src/: attention_flag.rs  badge.rs  counted.rs  empty_state.rs  filter_chips.rs  freshness.rs  health_strip.rs  heartbeat.rs  key_hints.rs  keys.rs  lib.rs  search_bar.rs  status_bar.rs  status_strip.rs  text.rs  theme.rs  widget.rs  widgets.rs
crates/suite-ui/tests/: snapshots.rs
crates/thomas-tui/: Cargo.toml
crates/thomas-tui/src/: counted.rs  empty_state.rs  filter_chips.rs  freshness.rs  key_hints.rs  keys.rs  layout.rs  lib.rs  search_bar.rs  status_strip.rs  text.rs  theme.rs  tui.rs  widget.rs  widgets.rs
crates/thomas-tui/tests/: snapshots.rs
crates/toolbox-bridge/: Cargo.toml
crates/toolbox-bridge/src/: convert.rs  error.rs  feed.rs  lib.rs  main.rs  snapshot.rs
crates/toolbox-bridge/tests/: bridge.rs
crates/toolfoundry/: Cargo.toml  README.md
crates/toolfoundry-core/: Cargo.toml
crates/toolfoundry-core/src/: error.rs  lib.rs  paths.rs  test_support.rs
crates/toolfoundry/config/: default.yaml
crates/toolfoundry/schemas/: tool-manifest.v1.schema.json
crates/toolfoundry/src/: lib.rs  main.rs
crates/toolfoundry/tests/: workstate_feed_contract.rs
crates/tripwire/: Cargo.toml  README.md
crates/tripwire/src/: baseline.rs  error.rs  hash.rs  lib.rs  main.rs  model.rs  report.rs  util.rs  watch.rs
crates/workstate/: Cargo.toml
crates/workstate-schema/: Cargo.toml
crates/workstate-schema/src/: lib.rs  loader.rs  writer.rs
crates/workstate/src/: lib.rs  main.rs
crates/workstate/tests/: bulwark.rs  compile_status.rs  scriptvault.rs  toolfoundry.rs
(+228 files in other folders)
