[workspace]
resolver = "2"
members = [
    "crates/suite-core",
    "crates/suite-ui",
    "crates/thomas-tui",
    "crates/toolbox-bridge",
    "crates/linux-ops-install",
    "crates/rex-check",
    "crates/rex-doctor",
    "crates/portman",
    "crates/pulse",
    "crates/tripwire",
    "crates/rewind",
    "crates/conductor",
    "crates/rex-forge",
    "crates/proto",
    "crates/toolfoundry",
    "crates/toolfoundry-core",
    "crates/bulwark",
    "crates/bulwark-core",
    "crates/rexops-core",
    "crates/rexops-adapters",
    "crates/rexops-app",
    "crates/rexops-cli",
    "crates/rexops-tui",
    "crates/scriptvault-core",
    "crates/scriptvault",
    "crates/workstate-schema",
    "crates/workstate",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
rust-version = "1.85"
authors = ["tomb"]
license = "MIT"
repository = "https://github.com/tom2025b/linux-ops-suite"

[workspace.dependencies]
suite-core = { path = "crates/suite-core" }
suite-ui = { path = "crates/suite-ui" }
thomas-tui = { path = "crates/thomas-tui" }
toolfoundry-core = { path = "crates/toolfoundry-core" }
bulwark-core = { path = "crates/bulwark-core" }
rexops-core = { path = "crates/rexops-core" }
rexops-adapters = { path = "crates/rexops-adapters" }
rexops-app = { path = "crates/rexops-app" }
rexops-tui = { path = "crates/rexops-tui" }
scriptvault-core = { path = "crates/scriptvault-core" }
workstate-schema = { path = "crates/workstate-schema" }
workstate = { path = "crates/workstate" }
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
unicode-segmentation = "1"
insta = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
minijinja = "2"
include_dir = "0.7"
toml = "0.8"
tempfile = "3"

# Deps brought in by consolidated tool crates (repos moved in-tree under crates/).
serde_yaml = "0.9"
shlex = "2"
libc = "0.2"
anyhow = "1"
directories = "6"
walkdir = "2"
# ScriptVault's deps (consolidated in-tree). `dirs` is distinct from `directories`
# above (different crate); ScriptVault uses `dirs`.
fuzzy-matcher = "0.3"
globset = "0.4"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap_complete = "4"
clap_mangen = "0.3"
arboard = "3"
syntect = { version = "5", default-features = false, features = [
    "default-syntaxes",
    "regex-onig",
] }
# workstate-schema's id generation (the producer/contract are now in-tree, see the
# path deps above — workstate was the last standalone repo consolidated in).
uuid = { version = "1", features = ["v4"] }

# NOTE: workstate-schema (the snapshot CONTRACT) and workstate (the PRODUCER lib +
# binary) are now IN-TREE path deps, declared above alongside the other suite
# crates. They were pinned cross-repo git deps until this consolidation; every
# consumer (toolbox-bridge, conductor, pulse) reaches them through workspace
# inheritance, so the contract still cannot drift — it is now a single in-tree crate.
