[package]
name = "bulwark-core"
version.workspace = true
edition = "2024"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure library for Bulwark's YAML-driven inventory and classification engine"
keywords = ["inventory", "yaml", "security", "filesystem", "tools"]
categories = ["filesystem", "config"]

[dependencies]
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Deliberately NOT taken from the workspace: the umbrella standardizes on the
# classic `serde_yaml` 0.9 (used by proto/toolfoundry), whereas bulwark-core was
# built against the maintained `serde_yaml_bw` fork (imported as `serde_yaml` via
# the package rename). Kept inline so this crate's parser stays unchanged; the
# two yaml libraries coexist in the workspace without conflict.
serde_yaml = { version = "2.5", package = "serde_yaml_bw" }
thiserror = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
