[package]
name = "conductor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line front-end for the Linux Ops Suite's state: take and restore workstate snapshots (rewind), and inspect findings and drift (bulwark), with human or JSON output."

[[bin]]
name = "conductor"
path = "src/main.rs"

# Lean on purpose, same philosophy as the other suite crates: conductor only
# reads and writes the suite's JSON state files. The hard deps are the CLI
# parser and serde for the snapshot envelope — no network, no async.
[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
