[package]
name = "conductor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line front-end for the Linux Ops Suite's state: take and restore workstate snapshots (rewind), and inspect findings and drift (bulwark), with human or JSON output."

[[bin]]
name = "conductor"
path = "src/main.rs"

# Lean on purpose, same philosophy as the other suite crates. Conductor is a pure
# CONSUMER of the canonical Workstate snapshot: it reads it through workstate-schema
# (the shared contract) and defines no snapshot model of its own. clap parses the
# CLI; serde_json renders --json output; chrono reads the snapshot's built_at. No
# network, no async.
[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
workstate-schema = { workspace = true }
chrono = { workspace = true }
