[package]
name = "conductor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The Linux Ops Suite's guided operator: reads the suite's own state, derives a short ordered runbook (do these things, in this order), and walks the operator through it — delegating every step to the tool that owns it. Read-only by default; it never writes a live file itself."

[[bin]]
name = "conductor"
path = "src/main.rs"

[lib]
name = "conductor"
path = "src/lib.rs"

# Conductor reads the ONE canonical Workstate snapshot through workstate-schema
# (the shared contract — the single source of truth for all snapshot data), probes
# $PATH, derives a plan, and renders it. It defines no snapshot model of its own.
# Its isatty/XDG/$PATH helpers come from suite-core (the shared, dependency-free
# helper crate); chrono supplies only the "checked Nm ago" stamp. serde/serde_json
# render the --json envelope and read the one non-snapshot input still on disk
# (tripwire drift, not yet in the contract). No network, no async.
[dependencies]
suite-core = { workspace = true }
workstate-schema = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Shared suite-wide TUI: the same ratatui-based chrome (Theme/pane/overlays + the
# Tui terminal guard) that RexOps/Pulse/ScriptVault render from, so Conductor's
# interactive view matches the rest of the suite. Workspace path dep — no git pin
# (that is only for repos outside this workspace).
suite-ui = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
tempfile = "3"
