[package]
name = "proto"
version.workspace = true
# Proto is edition 2024 (newer than the workspace's 2021). Mixed editions are
# legal in a workspace; kept explicit until the whole workspace moves to 2024.
edition = "2024"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Guided protocol / checklist runner for the Linux Ops Suite"
readme = "README.md"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
shlex = { workspace = true }
libc = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
