[package]
name = "pulse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A calm, read-only TUI status instrument for the Linux Ops Suite: opens to a single suite verdict (healthy / needs attention / incomplete) on a near-empty screen."

[[bin]]
name = "pulse"
path = "src/main.rs"

# Rendering stays lean (own ANSI, a tiny libc call for terminal size). TTY and
# $PATH helpers come from suite-core (the shared, dependency-free helper crate).
# The one JSON concession: Pulse reads four suite contracts (Workstate snapshot,
# RexOps snapshot, Proto sessions, Bulwark feed), so it uses the workspace's
# serde/serde_json rather than hand-rolling a parser — serde also ignores unknown
# fields by default, exactly what CONTRACT_RULES.md requires. No ratatui, no network.
[dependencies]
suite-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
