[package]
name = "pulse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A calm, read-only TUI status instrument for the Linux Ops Suite: opens to a single suite verdict (healthy / needs attention / incomplete) on a near-empty screen."

[[bin]]
name = "pulse"
path = "src/main.rs"

# Interactive rendering is the shared suite chrome: suite-ui (over ratatui +
# crossterm) owns the theme, panes, overlays, the terminal guard, and
# display-width truncation, so Pulse stops hand-rolling ANSI/termios. TTY and
# $PATH helpers still come from suite-core (the shared, dependency-free helper
# crate).
#
# Pulse reads exactly ONE artifact: the Workstate snapshot, through workstate-schema
# (its `Snapshot` type + canonical path + validating loader). Everything it shows —
# freshness, attention, per-source presence, protocol-run outcomes — is DERIVED from
# that snapshot; it never reads a raw producer feed. serde/serde_json remain for the
# few small local models elsewhere in the binary. No network.
[dependencies]
suite-core = { workspace = true }
suite-ui = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
workstate-schema = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
# Tests construct an in-memory Snapshot (whose built_at is a chrono DateTime) to
# exercise the derivations without touching disk.
chrono = { workspace = true }
