[package]
name = "rex-forge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI-first project scaffolder for Rust and Go"

[[bin]]
name = "rex-forge"
path = "src/main.rs"

[dependencies]
suite-ui = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
minijinja = { workspace = true }
include_dir = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
