[package]
name = "suite-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared terminal-UI chrome for the Linux Ops Suite: theme/palette (cyan/amber + NO_COLOR), rounded panes, and common overlays."

[features]
default = []
# The ThemeChoice/ColorChoice `ValueEnum` derives now live in thomas-tui;
# suite-ui's clap feature just forwards to theirs, so `suite-ui/clap` still
# makes `--theme`/`--color` parse straight into the re-exported enums.
clap = ["thomas-tui/clap"]

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
thomas-tui = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[[example]]
name = "gallery"
path = "examples/gallery.rs"
