[package]
name = "thomas-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A small, general-purpose terminal-UI toolkit: a NO_COLOR-aware theme, a RAII terminal scope guard (panic-safe setup/teardown, suspend-for-child), centering helpers, and Unicode-aware truncation, over ratatui + crossterm."

[features]
default = []
# Derive `clap::ValueEnum` on ThemeChoice/ColorChoice so `--theme`/`--color`
# parse straight into them. Off by default; consumers without clap stay lean.
clap = ["dep:clap"]

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true, optional = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
