[package]
name = "toolbox-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bridges Bulwark findings from the Workstate snapshot into a ScriptVault sidecar feed. Bulwark -> Workstate -> ScriptVault; no direct tool-to-tool calls."

[dependencies]
# The official Workstate library: the bridge deserializes snapshot.json through
# Workstate's own `Snapshot`/`Finding` types so the contract cannot drift.
# Pinned by rev like every other cross-repo suite dependency.
#
# Pinned to Workstate v4 (path/risk/owner promoted to first-class `Finding`
# fields; the passthrough `rest` bag removed). This is the merge commit on
# workstate `main`.
workstate = { git = "https://github.com/tom2025b/workstate", rev = "b0c9bb929a13387888b84132613f1da46184613c" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = "3"
