[package]
name = "toolbox-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bridges Bulwark findings from the Workstate snapshot into a ScriptVault sidecar feed. Bulwark -> Workstate -> ScriptVault; no direct tool-to-tool calls."

[dependencies]
# The Workstate snapshot CONTRACT crate. The bridge is a pure reader: it
# deserializes the snapshot through workstate-schema's own `Snapshot`/`Finding`
# types and reads it via the shared `load_snapshot`, so the format and the read
# path cannot drift from the producer. A reader needs only the contract crate,
# not the full `workstate` producer.
workstate-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# The integration test drives the REAL producer (SnapshotBuilder + ingest adapters)
# to compile a snapshot from fixtures, then runs the bridge against it — so the test
# needs the full `workstate` producer crate. The library itself depends only on
# `workstate-schema`. Inherited from the workspace, which pins it to the SAME rev as
# workstate-schema so the two can never resolve to different revisions.
workstate = { workspace = true }
